--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-GOOGLE_API_KEY="AIzaSyD8EQ2oLhczkeHrWnOgVeuhCsctXvvLE6c"
+
+
+GOOGLE_CLIENT_ID="452575110140-085ogb55kt1hotoklrubajcp6940v9s1.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_PROJECT_ID="fiery-splice-469818-e5"
+GOOGLE_REDIRECT_URI="http://localhost"
+GEMINI_API_KEY="AIzaSyD8EQ2oLhczkeHrWnOgVeuhCsctXvvLE6c"
