acrescentei o banco de conhecimento RAG para o agent , e criei uma pasta para adicionar os arquivos para a criação do banco vetorial

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ GOOGLE_CLIENT_SECRET="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"
 GOOGLE_PROJECT_ID="fiery-splice-469818-e5"
 GOOGLE_REDIRECT_URI="http://localhost"
 GEMINI_API_KEY="AIzaSyD8EQ2oLhczkeHrWnOgVeuhCsctXvvLE6c"
+
+
+SMITHERY_API_KEY = "9f38df07-60c0-4ad1-a930-e0118e8f9aae"
+CHAVE_API_DO_GOOGLE_TOOLS_MCP="Elias_teste_mcp"
+
+HUGGINGFACEHUB_API_TOKEN = "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"
